commit for logs

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -300,7 +300,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Levels/Area1-Rework
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 None=======
 
 [DetailCategories]
@@ -4226,9 +4226,6 @@ bPlatformUsed[29]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
-
-[FEditorModeTools]
-CoordSystem=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
