--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3502,13 +3502,14 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=LightingResults
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/finishedassets/standstone.standstone;
 RecentlyPlaced=/Game/Models/finishedassets/shortsword_lowpoly_PhysicsAsset.shortsword_lowpoly_PhysicsAsset;
 RecentlyPlaced=/Game/Models/finishedassets/spynx/LP_destroyed_spynx.LP_destroyed_spynx;
 RecentlyPlaced=/Game/Models/finishedassets/shield/BrokenShieldTexture.BrokenShieldTexture;
@@ -3528,7 +3529,6 @@ RecentlyPlaced=/Game/Models/finishedassets/pillararea3/Pillar__1_.Pillar__1_;
 RecentlyPlaced=/Game/Models/finishedassets/oven/Brick_1_Mat.Brick_1_Mat;
 RecentlyPlaced=/Game/Models/finishedassets/table/NewMaterial.NewMaterial;
 RecentlyPlaced=/Game/David-o020107h/Textures/Wood_texture_1_Mat.Wood_texture_1_Mat;
-RecentlyPlaced=/Game/Models/finishedassets/torch/NewMaterial.NewMaterial;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
