Created Boss AI

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,6 +81,7 @@ TelevisionScreenResolutions=(Description="4K Digital Cinema",Width=4096,Height=2
 UseMouseForTouch=False
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -105,12 +106,12 @@ CurrentPosGridSize=4
 CameraSpeed=8
 
 [MRU]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Levels/Area2-MarketMeshStart
-MRUItem2=/Game/Levels/Demo
-MRUItem3=/Game/Levels/MechanicsLevel
-MRUItem4=/Game/Levels/Temple-Area
-MRUItem5=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/Demo
+MRUItem2=/Game/Levels/Area1-Rework
+MRUItem3=/Game/Levels/Area2-MarketMeshStart
+MRUItem4=/Game/Levels/MechanicsLevel
+MRUItem5=/Game/Levels/Temple-Area
 MRUItem6=/Game/Levels/Area2-Market
 MRUItem7=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem8=/Game/Levels/texturedzoo
@@ -255,6 +256,7 @@ ThirdPerson_AnimBP_C=
 Pause_Menu_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Start_Menu_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 ChangeLevelActor_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+Settings_Menu_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -279,7 +281,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/GW000979/InvInterface
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -302,15 +304,15 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area1-Rework
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
+OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
 OpenAssetsAtExit=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
+OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
+OpenAssetsAtExit=/Game/Chloe/UI/Settings_Menu.Settings_Menu
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2983,6 +2985,67 @@ REINST_TopDownCharacter_C_267.ComponentReplication=True
 REINST_TopDownCharacter_C_267.Activation=True
 REINST_TopDownCharacter_C_267.Cooking=True
 REINST_TopDownCharacter_C_267.Events=True
+BaseAI_C.Drop=True
+BossAI_C.Tick=True
+BossAI_C.Default=True
+BossAI_C.Stats=True
+BossAI_C.Status=True
+BossAI_C.Bleed=True
+BossAI_C.Stun=True
+BossAI_C.Crystalise=True
+BossAI_C.Blind=True
+BossAI_C.Poison=True
+BossAI_C.LifeSteal=True
+BossAI_C.Drop=True
+BossAI_C.Character=True
+BossAI_C.Camera=True
+BossAI_C.Pawn=True
+BossAI_C.Rendering=True
+BossAI_C.Replication=True
+BossAI_C.Input=True
+BossAI_C.Actor=True
+BossAI_C.Variable=True
+BossAI_C.Sockets=True
+BossAI_C.Character Movement: Jumping / Falling=True
+BossAI_C.Character Movement (General Settings)=True
+BossAI_C.Character Movement: Walking=True
+BossAI_C.Character Movement: Swimming=True
+BossAI_C.Character Movement: Flying=True
+BossAI_C.Character Movement: Custom Movement=True
+BossAI_C.Character Movement (Rotation Settings)=True
+BossAI_C.Character Movement (Networking)=True
+BossAI_C.Character Movement: Physics Interaction=True
+BossAI_C.Character Movement=True
+BossAI_C.Character Movement: Avoidance=True
+BossAI_C.Character Movement: NavMesh Movement=True
+BossAI_C.RootMotion=True
+BossAI_C.NavMovement=True
+BossAI_C.Velocity=True
+BossAI_C.PlanarMovement=True
+BossAI_C.MovementComponent=True
+BossAI_C.Tags=True
+BossAI_C.ComponentReplication=True
+BossAI_C.Activation=True
+BossAI_C.Cooking=True
+BossAI_C.Events=True
+BossAI_C.TransformCommon=True
+BossAI_C.Animation=True
+BossAI_C.Mesh=True
+BossAI_C.Materials=True
+BossAI_C.Clothing=True
+BossAI_C.ClothingSimulation=True
+BossAI_C.Physics=True
+BossAI_C.Collision=True
+BossAI_C.Lighting=True
+BillboardComponent.Variable=True
+BillboardComponent.TransformCommon=True
+BillboardComponent.Sockets=True
+BillboardComponent.Sprite=True
+BillboardComponent.Rendering=True
+BillboardComponent.Tags=True
+BillboardComponent.ComponentReplication=True
+BillboardComponent.Cooking=True
+BillboardComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3104,7 +3167,7 @@ InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.PinOptions.PinNames\" "
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
@@ -3169,11 +3232,11 @@ BTTaskNode=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3230,6 +3293,7 @@ AnimInstance=
 K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node="\"Object.PinOptions.PinNames\" "
+ChangeLevelActor_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -4075,26 +4139,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Levels/Area2-MarketMeshStart
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem3=/Game/GameMode/GameMode1
-MRUItem4=/Game/Levels/Demo
-MRUItem5=/Game/Levels/MechanicsLevel
-MRUItem6=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem7=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem8=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem9=/Game/Levels/Temple-Area
-MRUItem10=/Game/Chloe/UI/Start_Menu
-MRUItem11=/Game/Levels/MainMenu
-MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem13=/Game/Chloe/UI/Pause_Menu
-MRUItem14=/Game/T019847G/Boss/BossBehaviourTree
-MRUItem15=/Game/T019847G/Boss/BossController
-MRUItem16=/Game/AIAgent/NewController
-MRUItem17=/Game/Levels/Area2-Market
-MRUItem18=/Game/AIAgent/AIbot
-MRUItem19=/Game/EnemyAgent/EnemyStats
+MRUItem0=/Game/Chloe/UI/Settings_Menu
+MRUItem1=/Game/Chloe/UI/Start_Menu
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem4=/Game/AIAgent/BossAI
+MRUItem5=/Game/Levels/Demo
+MRUItem6=/Game/AIAgent/BaseAI
+MRUItem7=/Game/Levels/Area1-Rework
+MRUItem8=/Game/Levels/Area2-MarketMeshStart
+MRUItem9=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem10=/Game/GameMode/GameMode1
+MRUItem11=/Game/Levels/MechanicsLevel
+MRUItem12=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem13=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem14=/Game/Levels/Temple-Area
+MRUItem15=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem16=/Game/Chloe/UI/Pause_Menu
+MRUItem17=/Game/T019847G/Boss/BossBehaviourTree
+MRUItem18=/Game/T019847G/Boss/BossController
+MRUItem19=/Game/AIAgent/NewController
 
 [WidgetTemplatesExpanded]
 Extra=False
